tests/errors/003-typechecking/004-incompatible-types/006-value-too-large-argument.xxx
y := (a : byte) => {}
z := y(256)
